@@ -19,7 +19,7 @@
  * You should have received a copy of the GNU General Public License
  * along with "prooftree". If not, see <http://www.gnu.org/licenses/>.
  * 
- * $Id: util.ml,v 1.23 2013/08/01 21:56:45 tews Exp $
+ * $Id: util.ml,v 1.24 2013/08/04 19:51:30 tews Exp $
  *)
 
 
@@ -30,6 +30,7 @@
 (** {2 Option functions} *)
 (****************************************************************************)
 
+(** Return the content of an option type or [assert false] for [None]. *)
 let access_option = function
   | Some x -> x
   | None -> assert false
