@@ -1,3 +1,7 @@
+2013-08-04  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* describe prooftree notification messages and other doc fixes
+
 2013-08-03  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* show selected menu entry
